[gd_scene load_steps=5 format=3 uid="uid://bv8hl5ac3j8ha"]

[ext_resource type="Script" path="res://Scenes/Turrets/shooter.gd" id="1_i5nau"]
[ext_resource type="Texture2D" uid="uid://r8vbjghqhcp4" path="res://assets/entities/TurretBackground.png" id="1_qv1uq"]
[ext_resource type="Texture2D" uid="uid://dxuvqcedl7pa4" path="res://assets/entities/Turret1.png" id="4_jk2o5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qk77w"]
radius = 81.0756

[node name="Gun" type="Area2D"]
collision_layer = 0
script = ExtResource("1_i5nau")
gun_texture = ExtResource("4_jk2o5")

[node name="BackgroundSprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_qv1uq")

[node name="TurretRange2D" type="CollisionShape2D" parent="."]
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_qk77w")

[node name="TurretSprite2D" type="Sprite2D" parent="."]
texture = ExtResource("4_jk2o5")

[node name="Muzzle" type="Marker2D" parent="TurretSprite2D"]
position = Vector2(32, 0)

[node name="FireRateTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="FireRateTimer" to="." method="_on_fire_rate_timer_timeout"]
